# aimnet2mult

./: .gitignore  CHANGELOG_WANDB_FIX.md  HIGH_FREQUENCY_RMSE_LOGGING.md  LICENSE  MANIFEST.in  README.md  README_UPDATE_SUMMARY.md  get_hess_force.py  pyproject.toml  requirements.txt  setup.py
aimnet2mult/: __init__.py  aev.py  calculators.py  constants.py  modules.py  ops.py
aimnet2mult/config/: default_model.yaml  default_train_mixed_fidelity.yaml
aimnet2mult/data/: __init__.py  collate.py  loaders.py  mixed.py  sampler.py  sgdataset.py
aimnet2mult/models/: __init__.py  aimnet2.py  base.py  jit_wrapper.py  mixed_fidelity_aimnet2.py
aimnet2mult/tools/: __init__.py  compile_jit.py  compute_sae.py  create_fake_data.py  create_test_datasets.py  dispersion_params.py
aimnet2mult/train/: __init__.py  calc_sae.py  cli.py  engine.py  fidelity_specific_utils.py  loss.py  metrics.py  pt2jpt.py  runner.py  utils.py
aimnet2mult/utils/: __init__.py  derivatives.py  imports.py  units.py
examples/: README.md  SCHEDULER_GUIDE.md  aim_aev_afv.ipynb  continue_training.sh  run_example.sh  run_example_train_with_dispersion.sh  single_fidel.sh  single_fidel_train_with_dispersion.sh  train.sh  train_load_weight.sh  train_nse.sh  train_single_fidelity.sh
examples/YAML/: model.yaml  train.yaml
examples/config/: model.yaml  scheduler_examples.yaml  train.yaml  train_cosine.yaml  train_optimized.yaml  train_warmrestart.yaml
examples/fake_dataset/: fidelity0.h5  fidelity1.h5  fidelity2.h5  sae_fid0.yaml  sae_fid1.yaml  sae_fid2.yaml
examples/mismatched/: model.yaml  train.yaml
sample_data/mismatched/: fidelity0.h5  fidelity1.h5  fidelity2.h5  sae_fid0.yaml  sae_fid1.yaml  sae_fid2.yaml
scripts/: check_dataset.py  curate_dataset.py
tests/: test_mixed_fidelity_training.py
